Fix bug where you couldnt select any other color after selecting rainbow

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <input type="color" id="color-picker" value="#fa3a33">
 
-        <button id="color-black">Black</button>
+        <button id="black">Black</button>
 
-        <button id="color-rainbow">Rainbow</button>
+        <button id="rainbow">Rainbow</button>
 
         <button id="clear">Clear</button>
 
